<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_my_news"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_myNews" />

    <item
        android:id="@+id/menu_hot_news"
        android:icon="@drawable/ic_turned_in_not_black_24dp"
        android:title="@string/menu_hotNews" />

    <item
        android:id="@+id/menu_discover"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/menu_discover" />

    <item
        android:id="@+id/menu_notation"
        android:icon="@drawable/ic_add_alert_black_24dp"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/menu_person"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/menu_person" />
</menu>